<resources>
    <string name="app_name">KreonCulatorApp</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_user">Add user</string>
    <string name="new_name">New name</string>
    <string name="units_quantity">Units quantity</string>
    <string name="create_new_user">Create new user</string>
    <string name="next">Next</string>
    <string name="product">Product</string>
    <string name="add_new">Add new</string>
    <string name="grammature_g">Grammature [g]</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="calculate">Calculate</string>
    <string name="add_product">Add product</string>
    <string name="product_name">Product name</string>
    <string name="fat_per_100g">Fat per 100g</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="from_base">from base</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_api_key">${GOOGLE_MAPS_API_KEY}</string>
    <string name="search_for_places_nearby">Search for places nearby</string>
    <string name="wyszukaj_miejsca_w_pobli_u">Wyszukaj miejsca w pobliżu</string>
    <string name="nawiguj_do_celu">Nawiguj do celu</string>
</resources>