<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register">


    <EditText
        android:id="@+id/inputName"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Name"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Email"
        app:layout_constraintBottom_toTopOf="@+id/inputPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/inputPasswordRepeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputPasswordRepeat"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPersonName|textWebPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/cambridge_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/alreadyRegisteredQuestion"
        android:layout_width="236dp"
        android:layout_height="26dp"
        android:layout_marginBottom="100dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logInText"
        android:layout_width="85dp"
        android:layout_height="27dp"
        android:layout_marginBottom="100dp"
        android:onClick="goToLogin"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toTopOf="@+id/inputName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/fingerprintAuthDrawable"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>