<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignIn">

    <EditText
        android:id="@+id/inputEmailSignIn"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/inputPasswordSignIn"
        android:layout_width="305dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginButtonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailSignIn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/loginButtonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:text="@string/Login"
        app:backgroundTint="@color/cambridge_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerTextViewClickableSignIn"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginBottom="208dp"
        android:onClick="LoginClick"
        android:text="@string/Register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="213dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="204dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registerTextViewClickableSignIn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="143dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmailSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/user_picture"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>